Hide scrollbars, Fix html, body height

--- a/src/App.scss
+++ b/src/App.scss
@@ -101,13 +101,14 @@
   to {opacity:0.5;}
 }
 
+html, body {
+  height: 100%;
+}
 body {
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 2em;
-  width: 100vw;
-  height: 100vh;
   background-color: #ffcc5c;
   transition: all 1s ease;
 }
@@ -124,7 +125,7 @@ h2 {
   cursor: pointer;
 }
 
-#sidebar::-webkit-scrollbar, #todos::-webkit-scrollbar, #lists::-webkit-scrollbar {
+body::-webkit-scrollbar {
   display: none;
 }
 
@@ -147,7 +148,7 @@ button:focus, button:active  {
   font-family: 'Anton', sans-serif;
   display: grid;
   grid-template-columns: 25% auto;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   max-width: 1100px;
   max-height: 800px;
@@ -222,7 +223,6 @@ button:focus, button:active  {
   max-width: 800px;
   display: flex;
   flex-direction: column;
-  overflow: scroll;
   margin-left: 1em;
   #new-todo {
     height: auto;
